<resources>
    <string name="app_name">Di ChattinZ</string>
    <string name="create_an_account">Create an Account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="messaging">Messaging</string>
    <string name="name">First Last</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">ChatBout What&#8230;</string>
    <string name="save">Save</string>
    <string name="additional_content">Additional Content</string>
    <string name="what_would_like_to_talk_about">What would like to talk about?</string>
</resources>
