<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/messaging"
            android:icon="@drawable/messaging"
            android:title="@string/messaging" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/account"
            android:title="@string/account" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>